fixed underscore overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,3 +51,9 @@ h1 {
     border: none !important;
 }
 
+#fillunderscore {
+    font-size: 30px;
+    font-weight: bolder;
+    letter-spacing: 7px;
+}
+
